--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,25 @@
 Package: cali
-Title: What the Package Does (One Line, Title Case)
+Title: Good vibes and model calibration
 Version: 0.0.1
 Authors@R: c(
     person("Pete", "Winskill", email = "p.winskill@imperial.ac.uk", role = c("aut", "cre"))
     )
-Description: What the package does (one paragraph).
+Description: Cali is a package to help calibrate malariasimulation model runs. 
+  For example to set EIR to match a given prevalence at a specific timepoint.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Remotes:
+  mrc-ide/malariasimulation
+Imports: 
+    ggplot2,
+    malariasimulation,
+    mockery,
+    stats
+Suggests: 
+    rmarkdown,
+    knitr,
+    testthat (>= 3.0.0)
+VignetteBuilder: knitr
+Config/testthat/edition: 3
