--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,13 +13,13 @@ RoxygenNote: 7.1.2
 Remotes:
   mrc-ide/malariasimulation
 Imports:
-    malariasimulation,
-    stats
+  malariasimulation (>= 1.3.0),
+  stats
 Suggests: 
-    ggplot2,
-    rmarkdown,
-    knitr,
-    mockery,
-    testthat (>= 3.0.0)
+  ggplot2,
+  rmarkdown,
+  knitr,
+  mockery,
+  testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
