--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(foreach,getDoParRegistered)
 importFrom(malariasimulation,run_simulation)
+importFrom(malariasimulation,run_simulation_with_repetitions)
 importFrom(malariasimulation,set_equilibrium)
 importFrom(mgcv,gam)
 importFrom(mgcv,rmvn)
