--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Remotes: 
-    mrc-ide/malariasimulation
+    mrc-ide/malariasimulation@sdn
 Imports:
     malariasimulation (>= 1.4.3)
 Suggests: 
