--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: cali
 Title: Good vibes and model calibration
-Version: 1.0.1
+Version: 1.0.2
 Authors@R: c(
     person("Pete", "Winskill", email = "p.winskill@imperial.ac.uk", role = c("aut", "cre"))
     )
@@ -11,7 +11,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Remotes: 
-    mrc-ide/malariasimulation,
+    mrc-ide/malariasimulation@dev,
     mrc-ide/malariaEquilibrium
 Imports:
     malariasimulation (>= 1.4.3),
