--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Remotes: 
-    mrc-ide/malariasimulation@dev,
+    mrc-ide/malariasimulation,
     mrc-ide/malariaEquilibrium
 Imports:
     malariasimulation (>= 1.4.3),
